Anthony Sirimarco - 4/22/2021 - Added user authentication with JWT tokens.